[package]
name = "raft-rs"
version = "0.1.0"
authors = ["ccc13 <currantxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
bytes = "0.5"
rand = "0.7"
futures = "0.3"